# aergia

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst
engine/: __init__.py  effect.py  graphics.py  var.py
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/aergia/: __init__.py  app.py  debug.py  effect.py  gameobject.py  graphics.py  ressource_loader.py  saveload.py  scene.py  tools.py
src/engine/: __init__.py  app.py  json_saver.py  level.py  loader.py  saveload.py  tools.py
src/tests/: _start.py  test.py
tests/: __init__.py  test_saveload.py
tutorials/: index.html
