[project]
name = "aergia"
version = "0.0.1"
authors = [
  { name="ritonun"},
]
description = "A pygame engine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [ # Optional
  "pygame-ce"
]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"