[project]
name = "aergia"
version = "0.0.2a"
authors = [
  { name="ritonun"},
]
description = "Game Engine Framework based on pygame"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["pygame", "engine", "game"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
]

dependencies = [ # Optional
  "pygame-ce"
]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

# [project.scripts]  # Optional
# sample = "sample:main"

# [tool.setuptools]
# package-data = {"sample" = ["*.dat"]}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"