[metadata]
name = aergia
version = attr: aergia.0.1.0
author = Ritonun
description = Game Engine Framework based on pygame
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = pygame, engine, framework
license = MIT
license_files = LICENSE
classifiers =
    Framework :: Pygame
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir = engine
packages = find:
python_requires = >=3.8
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where = engine
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
